APEX-654: Added form 2 and form 1 settings and permissions

--- a/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
@@ -12,6 +12,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: broach_na
+      label: N/A
+    -
       value: hex
       label: 'Hex<img src=''/sites/apex-tools/files/paragraphs_type_icon/Hex_Sckt_Profile.png''>'
     -
