--- a/config/apex-tools/default/field.storage.paragraph.field_magnetic_field.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_magnetic_field.yml
@@ -12,6 +12,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: magnetic_na
+      label: N/A
+    -
       value: magnetic_bolt_clearance_mb
       label: 'Magnetic Bolt Clearance (MB)'
     -
