--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -39,6 +39,7 @@ permissions:
   - 'create paragraph content bit_holder_male_hex_drive'
   - 'create paragraph content bit_holder_retention_method'
   - 'create paragraph content broach_opening'
+  - 'create paragraph content components_to_be_covered_'
   - 'create paragraph content cover_features'
   - 'create paragraph content dimensions'
   - 'create paragraph content drive_configuration_para'
@@ -102,6 +103,7 @@ permissions:
   - 'update paragraph content bit_holder_male_hex_drive'
   - 'update paragraph content bit_holder_retention_method'
   - 'update paragraph content broach_opening'
+  - 'update paragraph content components_to_be_covered_'
   - 'update paragraph content cover_features'
   - 'update paragraph content dimensions'
   - 'update paragraph content drive_configuration_para'
@@ -153,6 +155,7 @@ permissions:
   - 'view paragraph content bit_holder_male_hex_drive'
   - 'view paragraph content bit_holder_retention_method'
   - 'view paragraph content broach_opening'
+  - 'view paragraph content components_to_be_covered_'
   - 'view paragraph content callout_section_footer'
   - 'view paragraph content callout_section_page_end'
   - 'view paragraph content card'
