--- a/config/apex-tools/default/field.storage.paragraph.field_components_to_be_covered_.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_components_to_be_covered_.yml
@@ -15,11 +15,11 @@ settings:
       value: bit
       label: 'Bit Only'
     -
+      value: bit_holder
+      label: 'Bit Holder Only'
+    -
       value: bit_bit_holder
       label: 'Bit and Bit Holder'
-    -
-      value: bit_holder
-      label: 'Bit Holder'
   allowed_values_function: ''
 module: options
 locked: false
