--- a/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
@@ -24,6 +24,9 @@ settings:
       value: square
       label: 'Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/SQUARE_Profiles.png''>'
     -
+      value: male_square
+      label: 'Male Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/SQUARE_Profiles.png''>'
+    -
       value: double_square
       label: 'Double Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/DblSqr_Sckt_Profile.png''>'
     -
