APEX-654: Added nylon components in form 2

--- a/config/apex-tools/default/core.entity_form_display.paragraph.cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.cover_features.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.cover_features.field_cover_features_radio
+    - field.field.paragraph.cover_features.field_field_nylon_component
     - field.field.paragraph.cover_features.field_nylon_other_textbox
     - field.field.paragraph.cover_features.field_nylon_requirements_yes_no_
     - field.field.paragraph.cover_features.field_o_d_limitations_must_speci
@@ -19,13 +20,19 @@ mode: default
 content:
   field_cover_features_radio:
     type: options_buttons
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_field_nylon_component:
+    type: options_buttons
     weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_nylon_other_textbox:
     type: string_textfield
-    weight: 5
+    weight: 6
     region: content
     settings:
       size: 60
@@ -57,14 +64,14 @@ content:
     third_party_settings: {  }
   field_o_d_limitations_must_speci:
     type: boolean_checkbox
-    weight: 2
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_od_textbox:
     type: string_textfield
-    weight: 3
+    weight: 4
     region: content
     settings:
       size: 60
@@ -90,7 +97,7 @@ content:
             selector: ''
   field_other_considerations_speci:
     type: boolean_checkbox
-    weight: 4
+    weight: 5
     region: content
     settings:
       display_label: true
