--- a/config/apex-tools/default/field.storage.paragraph.field_drive_configuration.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_drive_configuration.yml
@@ -12,6 +12,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: drive_na
+      label: N/A
+    -
       value: dIN_standard
       label: 'DIN Standard'
     -
