APEX-792: CSQW UAT fixes BE

--- a/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver_drive_type.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver_drive_type.default.yml
@@ -27,23 +27,27 @@ content:
         hex_insert:
           value: '1'
           edit_mode: edit
-          weight: '-10'
+          weight: '0'
         hex_power:
           value: '1'
           edit_mode: edit
-          weight: '-9'
+          weight: '0'
         threaded:
           value: '1'
           edit_mode: edit
-          weight: '-8'
+          weight: '0'
         female_square:
           value: '1'
           edit_mode: edit
-          weight: '-7'
+          weight: '0'
         drive_type_other:
           value: '1'
           edit_mode: edit
-          weight: '-6'
+          weight: '0'
+        embedded_magnet:
+          value: '1'
+          edit_mode: edit
+          weight: '0'
       edit_mode: closed
     third_party_settings: {  }
 hidden:
