--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -44,6 +44,7 @@ permissions:
   - 'create paragraph content dimensions'
   - 'create paragraph content drive_configuration_para'
   - 'create paragraph content drive_type_other'
+  - 'create paragraph content embedded_magnet'
   - 'create paragraph content female_square'
   - 'create paragraph content female_square_drive_short'
   - 'create paragraph content female_square_drive_standard_typ'
@@ -108,6 +109,7 @@ permissions:
   - 'update paragraph content dimensions'
   - 'update paragraph content drive_configuration_para'
   - 'update paragraph content drive_type_other'
+  - 'update paragraph content embedded_magnet'
   - 'update paragraph content female_square'
   - 'update paragraph content female_square_drive_short'
   - 'update paragraph content female_square_drive_standard_typ'
@@ -167,6 +169,7 @@ permissions:
   - 'view paragraph content dimensions'
   - 'view paragraph content drive_configuration_para'
   - 'view paragraph content drive_type_other'
+  - 'view paragraph content embedded_magnet'
   - 'view paragraph content excerpt'
   - 'view paragraph content faq'
   - 'view paragraph content faqs_group'
