--- a/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_features.default.yml
@@ -31,29 +31,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_embedded_magnets:
-    type: double_field
-    weight: 8
-    region: content
-    settings:
-      first:
-        type: checkbox
-        label_display: block
-        size: 30
-        placeholder: ''
-        label: 'Embedded magnets'
-        cols: 10
-        rows: 5
-      second:
-        type: select
-        label_display: block
-        size: 30
-        placeholder: ''
-        label: Style
-        cols: 10
-        rows: 5
-      inline: false
-    third_party_settings: {  }
   field_exposed_tip_of_bit:
     type: double_field
     weight: 6
@@ -108,7 +85,7 @@ content:
     third_party_settings: {  }
   field_free_spinning:
     type: options_buttons
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -137,7 +114,7 @@ content:
     third_party_settings: {  }
   field_o_d_limitations:
     type: double_field
-    weight: 11
+    weight: 10
     region: content
     settings:
       first:
@@ -160,7 +137,7 @@ content:
     third_party_settings: {  }
   field_other_considerations:
     type: double_field
-    weight: 12
+    weight: 11
     region: content
     settings:
       first:
@@ -237,7 +214,7 @@ content:
     third_party_settings: {  }
   field_screw_press_fit:
     type: options_buttons
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -266,4 +243,5 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_embedded_magnets: true
   status: true
