--- a/config/apex-tools/default/field.field.paragraph.screwdriver_cover_features.field_retractable.yml
+++ b/config/apex-tools/default/field.field.paragraph.screwdriver_cover_features.field_retractable.yml
@@ -25,7 +25,7 @@ settings:
     max: null
     min: null
     required: false
-    on_label: 'Retractable(how much?)'
+    on_label: 'Retractable (travel distance)'
     off_label: 'Off'
   second:
     label: ''
@@ -41,14 +41,14 @@ settings:
     list: true
     allowed_values:
       -
-        label: spring
-        value: spring
-      -
-        label: thread
+        label: Thread
         value: thread
       -
-        label: 'free floating'
+        label: 'Free Floating'
         value: free_floating
+      -
+        label: 'Spring Loaded'
+        value: spring
     max: null
     min: null
     required: false
