--- a/composer.json
+++ b/composer.json
@@ -51,35 +51,36 @@
         "drupal/admin_toolbar": "^3.4",
         "drupal/advagg": "^6.0@alpha",
         "drupal/allowed_formats": "^2.0",
+        "drupal/bartik": "^1.0",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/bg_image_formatter": "^1.16",
         "drupal/blazy": "^2.14",
         "drupal/block_class": "^2.0",
         "drupal/block_field": "^1.0@RC",
+        "drupal/classy": "^1.0",
         "drupal/classy_paragraphs": "^1.0@dev",
+        "drupal/color": "^1.0",
         "drupal/color_field": "^3.0",
         "drupal/conditional_fields": "^4.0@alpha",
         "drupal/config_export_ignore": "^1.1",
-        "drupal/config_ignore": "^2.4",
+        "drupal/config_ignore": "^3.0@beta",
         "drupal/config_split": "^1.9",
         "drupal/config_update": "^2.0@alpha",
         "drupal/contact_storage": "^1.3",
         "drupal/content_sync": "^3.0@beta",
         "drupal/cookiebot": "^1.0@alpha",
-        "drupal/core-composer-scaffold": "9.5.10",
-        "drupal/core-dev": "^9.4.7",
-        "drupal/core-project-message": "9.5.10",
-        "drupal/core-recommended": "9.5.10",
-        "drupal/core-vendor-hardening": "^9.4.7",
-        "drupal/csv_serialization": "^2.0",
+        "drupal/core-composer-scaffold": "^10.0",
+        "drupal/core-project-message": "^10.0",
+        "drupal/core-recommended": "^10.0",
+        "drupal/core-vendor-hardening": "^10.0",
+        "drupal/csv_serialization": "^3.0",
         "drupal/current_page_crumb": "^1.4",
         "drupal/default_paragraphs": "^2.0@RC",
         "drupal/devel": "^5.1",
-        "drupal/devel_entity_updates": "^3.0",
+        "drupal/devel_entity_updates": "^4.1",
         "drupal/devel_php": "^1.5",
         "drupal/diff": "^1.1",
         "drupal/double_field": "^4.1",
-        "drupal/drupalmoduleupgrader": "^1.9",
         "drupal/dynamic_entity_reference": "^4.0@alpha",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/edit_uuid": "^2.1",
@@ -106,10 +107,11 @@
         "drupal/file_mdm": "^2.5",
         "drupal/fixed_block_content": "^1.2",
         "drupal/focal_point": "^2.0@alpha",
-        "drupal/geocoder": "^3.31",
+        "drupal/geocoder": "^4.9",
         "drupal/geofield": "^1.52",
         "drupal/geolocation": "^3.12",
         "drupal/google_tag": "^1.6",
+        "drupal/hal": "^2.0",
         "drupal/hubspot": "^3.0@alpha",
         "drupal/image_effects": "^3.4",
         "drupal/imageapi_optimize": "^4.0",
@@ -149,23 +151,28 @@
         "drupal/purge": "^3.4",
         "drupal/purge_purger_http": "^1.1",
         "drupal/quick_node_clone": "^1.16",
+        "drupal/quickedit": "^1.0",
         "drupal/rabbit_hole": "^1.0@beta",
+        "drupal/rdf": "^2.0",
         "drupal/recaptcha": "^3.2",
         "drupal/redirect": "^1.8",
         "drupal/responsive_background_image": "^2.0@beta",
         "drupal/robotstxt": "^1.5",
         "drupal/schema_metatag": "^2.4",
         "drupal/search_api": "^1.28",
-        "drupal/search_api_solr": "4.2.8",
+        "drupal/search_api_solr": "4.2.11",
         "drupal/select_or_other": "^4.1",
         "drupal/selective_better_exposed_filters": "^3.0@beta",
+        "drupal/seven": "^1.0",
         "drupal/sfweb2lead_webform": "^5.2",
         "drupal/shield": "^1.7",
         "drupal/simple_multistep": "^2.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "^2.0@beta",
+        "drupal/slick": "^2.9",
+        "drupal/slick_views": "^2.7",
         "drupal/smart_trim": "^2.0",
-        "drupal/stage_file_proxy": "^2.1",
+        "drupal/stage_file_proxy": "2.0.0",
         "drupal/structure_sync": "^2.0",
         "drupal/svg_image": "^3.0",
         "drupal/swiftmailer": "^2.4",
@@ -188,7 +195,7 @@
         "drupal/we_megamenu": "^1.13",
         "drupal/webform": "^6.2@beta",
         "drupal/webform_mailchimp": "^5.10",
-        "drush/drush": "10.6.2",
+        "drush/drush": "^12.0",
         "furf/jquery-ui-touch-punch": "^1.0",
         "geocoder-php/google-maps-provider": "^4.7",
         "league/flysystem-sftp": "^2.0",
@@ -196,13 +203,17 @@
         "monolog/monolog": "^2.9",
         "mpdf/mpdf": "^8.1",
         "topfloor/composer-cleanup-vcs-dirs": "^1.1",
-        "vlucas/phpdotenv": "^5.3",
+        "vlucas/phpdotenv": "^5.5",
         "vmlyr-drupal/bazo": "^8.0",
-        "vmlyr-drupal/biplane": "^8.0",
-        "vmlyr-drupal/blackbird": "^8.0",
-        "vmlyr-drupal/kit-docksal-commands": "dev-8.x-2.x",
-        "vmlyr-drupal/kit-drush-commands": "8.0.13",
+        "vmlyr-drupal/biplane": "^10.0",
+        "vmlyr-drupal/blackbird": "^10.0",
+        "vmlyr-drupal/kit-docksal-commands": "^8.2",
+        "vmlyr-drupal/kit-drush-commands": "8.0.15",
         "webflo/drupal-finder": "^1.2"
+    },
+    "require-dev": {
+        "drupal/core-dev": "^10.0",
+        "nascom/grumphp-drupal": "^1.0"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -226,7 +237,10 @@
             "drupal/core-vendor-hardening": true,
             "topfloor/composer-cleanup-vcs-dirs": true,
             "php-http/discovery": true,
-            "mglaman/composer-drupal-lenient": true
+            "mglaman/composer-drupal-lenient": true,
+            "phpstan/extension-installer": true,
+            "phpro/grumphp": true,
+            "nascom/grumphp-drupal": true
         }
     },
     "autoload": {
@@ -321,9 +335,8 @@
                 "https://www.drupal.org/node/2830403": "https://www.drupal.org/files/issues/2021-02-23/choose_and_order-2830403-44.patch"
             },
             "drupal/core": {
-                "https://www.drupal.org/node/1091852": "https://www.drupal.org/files/issues/2023-01-30/1091852-172.patch",
+                "https://www.drupal.org/node/1091852": "https://www.drupal.org/files/issues/2023-05-12/1091852-177.patch",
                 "https://www.drupal.org/node/2429699": "https://www.drupal.org/files/issues/2020-10-25/drupal-views-entity-reference-filter-2429699-369.patch",
-                "https://www.drupal.org/node/2516938": "https://www.drupal.org/files/issues/2020-06-09/core-toolbar-mobile-2516938-73.patch",
                 "https://www.drupal.org/node/2642122": "https://www.drupal.org/files/issues/2023-01-06/2642122-151.patch",
                 "https://www.drupal.org/node/2827921": "https://www.drupal.org/files/issues/2827921-remove-missing-responsive-image-width-exception.patch",
                 "https://www.drupal.org/project/drupal/issues/2663316": "https://www.drupal.org/files/issues/2019-10-21/2663316-76.drupal.Broken-title-in-modal-dialog-when-title-is-a-render-array.patch",
@@ -366,16 +379,13 @@
             "drupal/views_selective_filters": {
                 "https://www.drupal.org/project/views_selective_filters/issues/3170132": "https://www.drupal.org/files/issues/2021-06-16/d9-compatibility-fixes-3170132-6.patch"
             },
-            "vmlyr-drupal/kit-drush-commands": {
-                "https://github.com/VMLYR/Drupal-KIT-Drush-Commands/issues/15": "https://github.com/VMLYR/Drupal-KIT-Drush-Commands/files/9203528/sync_fix.diff.txt"
-            },
             "vmlyr-drupal/kit-docksal-commands": {
                 "CLECO(atg) theme deployment setup" : "patches/atg-custom-theme-setup.patch"
             },
             "drupal/content_sync": {
                 "https://www.drupal.org/project/content_sync/issues/3270665": "https://www.drupal.org/files/issues/2022-04-21/3270665_php8_compatibility.patch",
                 "https://www.drupal.org/project/content_sync/issues/3117708": "https://www.drupal.org/files/issues/2021-07-22/3117708-6_entity_type_error.patch",
-                "https://www.drupal.org/project/content_sync/issues/3330173": "https://www.drupal.org/files/issues/2023-07-12/content_sync_drupal10_compatibility_3330173.patch"
+                "D10 compatibility - https://www.drupal.org/project/content_sync/issues/3330173": "https://www.drupal.org/files/issues/2023-07-18/content_sync_d10_compatiblity.patch"
             },
             "drupal/we_megamenu": {
                 "D10 compatibility": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-drupal-10.patch",
@@ -407,6 +417,12 @@
             },
             "drupal/path_redirect_import": {
                 "MigrateTools issue": "https://www.drupal.org/files/issues/2023-07-11/3313386_11.patch"
+            },
+            "drupal/dynamic_entity_reference": {
+                "HAL support": "https://www.drupal.org/files/issues/2023-07-17/dynamic_entity_reference-3350347-D10-hal-support-10.patch"
+            },
+            "drupal/search_api_solr": {
+                "SolrCommands construct": "https://www.drupal.org/files/issues/2022-12-07/search_api_solr-arguments_error-3325880-2.patch"
             }
 
 
