APEX-792: BE changes

--- a/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
@@ -64,6 +64,10 @@ content:
           edit_mode: edit
           weight: '0'
           value: 0
+        bit_configuration:
+          value: '1'
+          edit_mode: edit
+          weight: '0'
         quotation_order_type:
           value: '1'
           edit_mode: edit
