--- a/config/apex-tools/default/field.field.paragraph.quotation_screwdriver.field_screwdriver.yml
+++ b/config/apex-tools/default/field.field.paragraph.quotation_screwdriver.field_screwdriver.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_screwdriver
+    - paragraphs.paragraphs_type.bit_configuration
     - paragraphs.paragraphs_type.bit_dimensions
     - paragraphs.paragraphs_type.bit_holder_retention_method
     - paragraphs.paragraphs_type.bit_holder_style
@@ -32,6 +33,7 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
+      bit_configuration: bit_configuration
       bit_dimensions: bit_dimensions
       bit_holder_retention_method: bit_holder_retention_method
       bit_holder_style: bit_holder_style
@@ -60,6 +62,9 @@ settings:
       basic_card_section:
         weight: 112
         enabled: false
+      bit_configuration:
+        weight: 109
+        enabled: true
       bit_dimensions:
         weight: 113
         enabled: true
@@ -119,6 +124,9 @@ settings:
         enabled: false
       drive_type_other:
         weight: 131
+        enabled: false
+      embedded_magnet:
+        weight: 134
         enabled: false
       enhanced_hero:
         weight: 132
