--- a/config/apex-tools/default/paragraphs.paragraphs_type.bit_configuration.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.bit_configuration.yml
@@ -1,9 +1,9 @@
-uuid: 99144bdc-a81f-41d7-b3f0-684ef928b88a
+uuid: 67e706c8-6cf3-4bc0-8c53-234fc4a75b4a
 langcode: en
 status: true
 dependencies: {  }
-id: screwdriver_cover_features
-label: 'Screwdriver Cover Features'
+id: bit_configuration
+label: 'Bit Configuration'
 icon_uuid: null
 icon_default: null
 description: ''
