--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -34,6 +34,7 @@ permissions:
   - 'access content'
   - 'access site-wide contact form'
   - 'access taxonomy overview'
+  - 'create paragraph content bit_configuration'
   - 'create paragraph content bit_dimensions'
   - 'create paragraph content bit_holder_female_square'
   - 'create paragraph content bit_holder_male_hex_drive'
@@ -100,6 +101,7 @@ permissions:
   - 'select terms in products'
   - 'select terms in products_offered'
   - 'select terms in tags'
+  - 'update paragraph content bit_configuration'
   - 'update paragraph content bit_dimensions'
   - 'update paragraph content bit_holder_female_square'
   - 'update paragraph content bit_holder_male_hex_drive'
@@ -154,6 +156,7 @@ permissions:
   - 'view media'
   - 'view paragraph content basic_card'
   - 'view paragraph content basic_card_section'
+  - 'view paragraph content bit_configuration'
   - 'view paragraph content bit_dimensions'
   - 'view paragraph content bit_holder_female_square'
   - 'view paragraph content bit_holder_male_hex_drive'
