APEX-654: changes related to bit holder style and some others

--- a/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
@@ -48,6 +48,10 @@ content:
           value: '1'
           edit_mode: edit
           weight: '0'
+        bit_holder_style:
+          value: '1'
+          edit_mode: edit
+          weight: '0'
         socket_dimensions:
           value: '1'
           edit_mode: edit
