--- a/config/apex-tools/default/core.entity_form_display.paragraph.socket_dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.socket_dimensions.default.yml
@@ -13,11 +13,12 @@ dependencies:
     - field.field.paragraph.socket_dimensions.field_h_broach_opening
     - field.field.paragraph.socket_dimensions.field_i_torx_r_size
     - field.field.paragraph.socket_dimensions.field_j_mag_depth
-    - field.field.paragraph.socket_dimensions.field_k_spring_force_rate_
     - field.field.paragraph.socket_dimensions.field_l_barbell_style_dims
+    - field.field.paragraph.socket_dimensions.field_spring_force_rate
     - paragraphs.paragraphs_type.socket_dimensions
   module:
     - physical
+    - triples_field
 id: paragraph.socket_dimensions.default
 targetEntityType: paragraph
 bundle: socket_dimensions
@@ -163,15 +164,9 @@ content:
         ft: '0'
         M: '0'
     third_party_settings: {  }
-  field_k_spring_force_rate_:
-    type: options_select
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_l_barbell_style_dims:
     type: physical_measurement_default
-    weight: 14
+    weight: 11
     region: content
     settings:
       default_unit: mm
@@ -184,6 +179,37 @@ content:
         km: '0'
         ft: '0'
         M: '0'
+    third_party_settings: {  }
+  field_spring_force_rate:
+    type: triples_field
+    weight: 10
+    region: content
+    settings:
+      first:
+        type: textfield
+        label_display: block
+        size: 30
+        placeholder: ''
+        label: Rest
+        cols: 10
+        rows: 5
+      second:
+        type: textfield
+        label_display: block
+        size: 30
+        placeholder: ''
+        label: 'Full Compressed'
+        cols: 10
+        rows: 5
+      third:
+        type: textfield
+        label_display: block
+        size: 30
+        placeholder: ''
+        label: 'Rate (lbf/in)'
+        cols: 10
+        rows: 5
+      inline: true
     third_party_settings: {  }
 hidden:
   created: true
