--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -38,6 +38,7 @@ permissions:
   - 'create paragraph content bit_holder_female_square'
   - 'create paragraph content bit_holder_male_hex_drive'
   - 'create paragraph content bit_holder_retention_method'
+  - 'create paragraph content bit_holder_style'
   - 'create paragraph content broach_opening'
   - 'create paragraph content components_to_be_covered_'
   - 'create paragraph content cover_features'
@@ -103,6 +104,7 @@ permissions:
   - 'update paragraph content bit_holder_female_square'
   - 'update paragraph content bit_holder_male_hex_drive'
   - 'update paragraph content bit_holder_retention_method'
+  - 'update paragraph content bit_holder_style'
   - 'update paragraph content broach_opening'
   - 'update paragraph content components_to_be_covered_'
   - 'update paragraph content cover_features'
@@ -156,6 +158,7 @@ permissions:
   - 'view paragraph content bit_holder_female_square'
   - 'view paragraph content bit_holder_male_hex_drive'
   - 'view paragraph content bit_holder_retention_method'
+  - 'view paragraph content bit_holder_style'
   - 'view paragraph content broach_opening'
   - 'view paragraph content callout_section_footer'
   - 'view paragraph content callout_section_page_end'
