Apex-794: Greawrench aus site upgrade issue completed.

--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -240,7 +240,7 @@ node--full--product:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--swiper
     - gearwrench_au/library--jquery-roving-tabindex
     - gearwrench_au/library--jquery-modal
@@ -255,7 +255,7 @@ node--full--product-category:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
 
 node--full--product-industry:
@@ -338,7 +338,7 @@ paragraph--full--accordion:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
 
 # Content #
@@ -388,7 +388,7 @@ paragraph--full--hero:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--swiper
 
 # Hero Slide #
@@ -402,7 +402,7 @@ paragraph--full--hero-slide:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Featured: Content #
 paragraph--full--featured-content:
@@ -443,7 +443,7 @@ paragraph--full--featured-media:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 paragraph--full--featured-media--layout-full:
   version: 1.x
@@ -491,7 +491,7 @@ paragraph--full--product-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--swiper
 
 # Pull Quote #
@@ -526,7 +526,7 @@ paragraph--full--tabs:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
 
 # Top Message CTA Bar #
@@ -540,7 +540,7 @@ paragraph--full--top-message-cta-bar:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 
 
@@ -564,7 +564,7 @@ region--header:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Footer #
 region--footer-first:
@@ -591,7 +591,7 @@ view--media-pages:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
 
 view--taxonomy-term:
@@ -611,7 +611,7 @@ view--related-products:
     - core/drupal
     - core/jquery
     - gearwrench_au/library--swiper
-    - core/jquery.once
+    - core/once
 
 view--new-products:
   version: 1.x
@@ -623,7 +623,7 @@ view--new-products:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
 
 view--product-category-grid:
@@ -662,7 +662,7 @@ view--social-feed:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--swiper
     - gearwrench_au/library--add-to-any
 
@@ -677,5 +677,5 @@ webform--warranty-replacement-form:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
