APEX-654: Additional changes

--- a/config/apex-tools/default/field.field.paragraph.drive_configuration_para.field_hex_size.yml
+++ b/config/apex-tools/default/field.field.paragraph.drive_configuration_para.field_hex_size.yml
@@ -11,7 +11,7 @@ id: paragraph.drive_configuration_para.field_hex_size
 field_name: field_hex_size
 entity_type: paragraph
 bundle: drive_configuration_para
-label: 'Hex Size'
+label: Size
 description: ''
 required: false
 translatable: false
