--- a/config/apex-tools/default/paragraphs.paragraphs_type.cover_features.yml
+++ b/config/apex-tools/default/paragraphs.paragraphs_type.cover_features.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: cover_features
-label: 'Cover Features'
+label: 'U-GUARD COVER REQUIREMENTS'
 icon_uuid: null
 icon_default: null
 description: ''
