--- a/config/apex-tools/default/field.field.paragraph.drive_configuration_para.field_hex_gender.yml
+++ b/config/apex-tools/default/field.field.paragraph.drive_configuration_para.field_hex_gender.yml
@@ -11,7 +11,7 @@ id: paragraph.drive_configuration_para.field_hex_gender
 field_name: field_hex_gender
 entity_type: paragraph
 bundle: drive_configuration_para
-label: 'Hex Gender'
+label: Gender
 description: ''
 required: false
 translatable: false
