--- a/config/apex-tools/default/field.field.paragraph.drive_configuration_para.field_other_type.yml
+++ b/config/apex-tools/default/field.field.paragraph.drive_configuration_para.field_other_type.yml
@@ -9,7 +9,7 @@ id: paragraph.drive_configuration_para.field_other_type
 field_name: field_other_type
 entity_type: paragraph
 bundle: drive_configuration_para
-label: 'Other Type'
+label: Type
 description: ''
 required: false
 translatable: false
