APEX-792: Captcha changes CSQW

--- a/config/apex-tools/default/field.storage.paragraph.field_triple_square_point_size.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_triple_square_point_size.yml
@@ -28,7 +28,7 @@ settings:
       label: 10mm
     -
       value: 12mm
-      label: 12mm\
+      label: 12mm
     -
       value: 14mm
       label: 14mm
